2002-10-14  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/tap/web.py twisted/web/script.py doc/man/mktap.1: adding an option to have a resource script as the root

2002-10-13  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/internet/utils.py twisted/internet/process.py
        twisted/internet/interfaces.py twisted/internet/default.py: Moved 
	utility functions into twisted.internet.utils

2002-10-12  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/internet/process.py twisted/internet/interfaces.py 
	twisted/internet/default.py: Add utility method to get output of
	programs.

2002-10-11  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* twisted/internet/wxsupport.py: improved responsiveness of wxPython
	GUI (50 FPS instead of 10 FPS).

2002-10-08  Brian Warner  <warner@twistedmatrix.com>

	* doc/howto: Added PB/cred and Application docs, updated Manhole
	and Process docs. Moved Manhole from "Administrators" section to
	"Developers" section.

2002-10-10  Moshe Zadka <moshez@twistedmatrix.com>

	* .: Releasing 0.99.4

  2002-10-07  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>
  
  	* .: Release 0.99.4rc1
2002-10-07  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* .: Release 0.99.4rc1
	
	* twisted/protocols/http.py: backed out changes to HTTP that
	broke 0.99.3 twisted.web.distrib.

2002-10-7  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/script.py: Add ResourceTemplate which uses PTL for
	creation of resources. 

2002-10-7  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/tap/web.py: It is now possibly to add processors via
	the command line


2002-10-04  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* twistd: when running in debug mode (-b), sending a SIGINT signal
	to the process will drop into the debugger prompt.

2002-10-5  Moshe Zadka <moshez@twistedmatrix.com>

	* .: Releasing 0.99.3

2002-10-01  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>
