@@ -1,5 +1,8 @@
 2002-10-14  Moshe Zadka <moshez@twistedmatrix.com>
 
+	* twisted/web/vhost.py: add a virtual host monster to support twisted
+	sites behind a reverse proxy
+
 	* twisted/tap/web.py twisted/web/script.py doc/man/mktap.1: adding an option to have a resource script as the root
 
 2002-10-13  Moshe Zadka <moshez@twistedmatrix.com>
